--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,6 +42,9 @@
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
   
+  <!-- Netlify Identity Widget for CMS Authentication -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
   {{ block "head" . }}{{ end }}
 </head>
 <body>
@@ -55,6 +58,20 @@
   
   <!-- Scripts -->
   <script src="/js/main.js"></script>
+  
+  <!-- Netlify Identity Widget Redirect Script -->
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
+  
   {{ block "scripts" . }}{{ end }}
 </body>
 </html>
